samples/_failures_safe/1761394217_bb77c2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dc7343fd.c: In function ‘main’:
./samples/SAFE/__tmp_dc7343fd.c:148:5: error: expected expression at end of input
  148 |     if (!
      |     ^~
./samples/SAFE/__tmp_dc7343fd.c:148:5: error: expected declaration or statement at end of input
